# sw_task

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  commit.sh
.github/workflows/: build.yml  docs.yml
benmark/: CMakeLists.txt
benmark/cpu_bound_task/: plot_performance.py
benmark/sw_task/cpu_bound_task/: Howto.md  cpu_task.json  monitor_cpu_test.py
benmark/sw_task/measure_resource/: How.md  out.json  result.json
benmark/sw_task/measure_resource/top/: monitor.py  plot.py  run.md
benmark/sw_task/measure_resource/top/data1/: config.txt  sw_result.json  tiger_result.json
benmark/sw_task/measure_resource/top/data2/: config.txt  sw_result.json  sw_timer_load  tiger_result.json  tiger_timer_load
benmark/sw_task/measure_resource/valgrind/: monitor.py  run.md
benmark/sw_task/measure_time/: execution_times.csv  how.md
benmark/sw_task/new_test/: How.md  draw.py  measure_psutil.py
benmark/sw_task/task_execution/: draw_line.py  tiger_execution_times.csv
benmark/sw_task/timer_test/: PureOneShotTest.h  guide.md  plot_rss.py
benmark/task_execution/: Howto.md
benmark/tiger_looper/: CMakeLists.txt
benmark/tiger_looper/benmark/: CMakeLists.txt
benmark/tiger_looper/benmark/cpu_bound_task/: tiger_cpu_task.cpp
benmark/tiger_looper/benmark/task_execution/: tiger_response_time.cpp
benmark/tiger_looper/benmark/timer_operation/: tiger_timer_load.cpp  tiger_timer_load_light.cpp
benmark/tiger_looper/benmark/timer_test/: tiger_oneshot.cpp
benmark/tiger_looper/examples/: all_test.cpp  task_runner.cpp  testMessage.cpp  testTimer.cpp
benmark/tiger_looper/include/: Buffer.h  Handler.h  Message.h  MessageQueue.h  Refbase.h  SLLooper.h  TimerManager.h
benmark/tiger_looper/src/: Handler.cpp  Message.cpp  MessageQueue.cpp  SLLooper.cpp  TimerManager.cpp  main.cpp
benmark/timer_test/: cpu_checker.sh  monitor_rss.sh  plot_massif.py  sw_task_oneshot.cpp
doc/: QA.md  api.html  presentation.md  sw_task.drawio  system_context.drawio
doc/design/: C&C.puml  C&C_data_flow.puml  C&C_interface.puml  communication_diagram.puml  static_module_view.puml
doc/design/sw_task/: class.puml  efficiency.puml  overall.puml  performance_a.puml  performance_b.puml  reuability.puml  timer_sigev_thread.puml  timer_timerfd_epoll.puml  userability_a.puml  userability_b.puml
doc/design/tiger/: efficiency.puml  performance.puml  userability.puml
examples/: Build.md  CMakeLists.txt  all_test.cpp  build_debug.sh  co_await.cpp  coawait_simple.cpp  exception_fetch.cpp  exception_out.cpp  exception_simple.cpp  exception_throw.cpp  exception_zero.cpp  fetch_coawait.cpp  fetch_data.cpp  fetch_data_OOP.cpp  handle_message.cpp  post.cpp  post_work.cpp  response_time.cpp  stress_timer.cpp  task_runner.cpp  timer.cpp  timer_bind.cpp  timer_lambda.cpp  timer_load.cpp  timer_vector.cpp
examples/benmark/: CMakeLists.txt
examples/benmark/cpu_bound_task/: Howto.md  cpu_task.cpp  evaluation.md  tiger_cpu_task.json
examples/benmark/task_execution/: Howto.md  compare_time.py  draw_line2.py  execution_times.csv  graph_draw.py  response_time.cpp  time_plot.py
examples/benmark/timer_operation/: Howto.md  compare.py  compare_simple.py  evaluation.md  monitor_test.sh  plot_results.py  timer_load.cpp
examples/benmark/timer_operation/test_result/test1/: Description.md
examples/sample/: timer_creation.cpp
include/: Awaitable.h  Buffer.h  CpuTaskExecutor.h  CpuTaskExecutor.tpp  Debug.h  DebugMacro.h  EventQueue.h  EventQueue.tpp  Handler.h  Log.h  Message.h  Promise.h  Promise.tpp  Refbase.h  SLLooper.h  SLLooper.tpp  State.h  State.tpp  Task.h  Timer.h  TimerManager.h
src/: Buffer.cpp  EventQueue.cpp  Handler.cpp  Message.cpp  Promise.cpp  SLLooper.cpp  State.cpp  Timer.cpp  TimerManager.cpp
uts/: CMakeLists.txt  test_handler.cpp  test_postwork.cpp  tmp.md
vscode/: mcp.json  settings.json
